Cascading Change Log

2.0.8 [unreleased]

2.0.7

  Fixed issue where c.t.Tap instances were not presented resolved c.t.Fields instances in local mode during planning.

  Fixed issue where Hadoop forgets past job completion status of a job during very long running c.f.Flows and
  throws a NPE when queried for the result.

2.0.6

  Added "cascading.step.display.id.truncate" property to allow simple truncation of flow and step ID values in
  the step display name.

  Fixed issue where attempting to iterate the left most side of a join more than once would silently fail on the
  Hadoop platform.

  Fixed issue where step state was not properly removed from the Hadoop distributed cache during cleanup.

  Fixed issue where c.f.Flow#writeStepsDot() would fail if a Flow c.f.FlowStep had multiple sinks.

  Fix for c.t.h.i.MultiInputFormat throwing j.l.java.lang.ArrayIndexOutOfBoundsException when there aren't any
  actual o.a.h.m.FileInputFormat input paths.

  Fix for c.t.h.i.MultiInputFormat throwing j.l.IllegalStateException on an empty child o.a.h.m.InputSplit array.

  Fix for j.l.IndexOutOfBoundsException thrown on an empty c.c.Cascade.

  Fix for c.t.c.SpillableProps#SPILL_COMPRESS not being honored if set to false.

2.0.5

  Updated c.f.p.ElementGraphException messages to name disconnected elements.

  Properly scope c.t.Tap properties to c.f.l.LocalFlowStep and then pass them to source/sink stages in
  c.f.l.s.LocalStepStreamGraph. @mrwalker

  Fix for c.s.u.DelimitedParser to support delimiter as last char in quoted field.

  Fix for c.o.f.UnGroup constructor failing against correct constructor values.

  Added missing setter methods on c.p.AppProps for application jar path and class values.

  Fix for possible NPE when debug logging is enabled during planning.

  Improved error message when Hadoop serializer for a given type cannot be found in some cases.

2.0.4

  Removed remnant log4j dependency in c.t.h.i.MultiInputSplit.
